# tugas-4-nomer-2-python

./: pyproject.toml  shell.nix
tugas/templates/: index.html  perkenalan.html
tugas/templates/pages/: index.html
tugas/tugas/: asgi.py  settings.py  urls.py  views.py  wsgi.py
